--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gatsby-transformer-sharp": "^2.3.19",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "typeface-muli": "^1.1.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.25.0",
